@@ -345,6 +345,9 @@
 				RelativePath="..\..\src\xml\LibXMLParser.cpp">
 			</File>
 			<File
+				RelativePath="..\..\src\xml\LibXMLTranscode.cpp">
+			</File>
+			<File
 				RelativePath="..\..\src\common\libsbml-version.cpp">
 			</File>
 			<File
